Resharding coordinator may orphan its state document if _resumeMigrations fails during teardown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0, 9.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v9.0
    • ClusterScalability 20Jul-3Aug
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Resharding coordinator does its clean up in the following order:

      • _resumeMigrations
      • _releaseSession
      • removes the coordinator

       

      If _resumeMigrations throws an unrecoverable error, everything after it is skipped. This would mean migrations are left disabled on the collection and there remains an orphaned coordinator document, migrations left disabled.

      Ensure proper clean up in resharding coordinator.

            Assignee:
            Kruti Shah
            Reporter:
            Kruti Shah
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: