SERVER-131629 Ensure resharding coordinator always resumes migration and removes state document (#59264)

GitOrigin-RevId: 294289d58b1270aea1d5f391d39f422ccea07a84