src/mongo/db/s/resharding/resharding_delta_collector_test_util.h
@@ -118,7 +118,6 @@ public:
     }
     void resumeMigrations(OperationContext*,
                           const NamespaceString&,
-                          const UUID&,
                           ReshardingAuthoritativeMetadataAccessLevelEnum,
                           std::function<OperationSessionInfo()>) override {
         MONGO_UNREACHABLE;
